@@ -302,6 +302,7 @@ librsvg.spec
 librsvg-features.h
 Makefile
 librsvg-2.0.pc
+librsvg-zip
 doc/Makefile
 gtk-engine/Makefile
 gtk-engine/examples/Makefile
