@@ -1,0 +1,39 @@
+#!/bin/sh
+
+# Build distribution zipfiles for librsvg on Win32: Runtime,
+# developer, engine and loader.
+
+ZIP=/tmp/librsvg-@VERSION@.zip
+DEVZIP=/tmp/librsvg-dev-@VERSION@.zip
+ENGINEZIP=/tmp/svg-gtk-engine-@VERSION@.zip
+LOADERZIP=/tmp/svg-gdk-pixbuf-loader-@VERSION@.zip
+
+# The DLL name generated by libtool with the passed --version-info
+DLLNAME=librsvg-2-@LIBRSVG_MAJOR_VERSION@.dll
+
+cd @prefix@
+rm $ZIP
+
+DLLDIR=lib
+[ -f bin/$DLLNAME ] && DLLDIR=bin
+
+zip $ZIP -@ <<EOF
+$DLLDIR/$DLLNAME
+EOF
+
+rm $DEVZIP
+zip -r $DEVZIP -@ <<EOF
+include/librsvg-2
+lib/librsvg-2.dll.a
+lib/pkgconfig/librsvg-2.0.pc
+EOF
+
+rm $ENGINEZIP
+zip $ENGINEZIP -@ <<EOF
+lib/gtk-2.0/2.2.0/engines/libsvg.dll
+EOF
+
+rm $LOADERZIP
+zip $LOADERZIP -@ <<EOF
+lib/gtk-2.0/2.2.0/loaders/svg_loader.dll
+EOF
